@@ -3,15 +3,12 @@ package chapter3.searching;
 import chapter3.searching.api.OST;
 import chapter3.searching.impl.BinarySearchST;
 import org.junit.Test;
-import org.junit.function.ThrowingRunnable;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.util.Map;
-import java.util.TreeMap;
+import java.lang.reflect.InvocationTargetException;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.*;
 
 
 @RunWith(Parameterized.class)
@@ -30,14 +27,19 @@ public class OSTTest {
         this.implClazz = implClazz;
     }
 
-    @Test
-    public void testRank() throws InstantiationException, IllegalAccessException {
-        OST<String, Integer> ost = implClazz.newInstance();
+    private OST<String, Integer> mockTestData() throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        OST<String, Integer> ost = implClazz.getConstructor().newInstance();
         String[] splits = "S E A R C H E X A M P L E".split(" ");
         //A C E H L M P R S X
         for (int i = 0; i < splits.length; i++) {
             ost.put(splits[i], i);
         }
+        return ost;
+    }
+
+    @Test
+    public void testRank() throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        OST<String, Integer> ost = mockTestData();
 
         StringBuilder sb = new StringBuilder();
         for (String key : ost.keys()) {
@@ -45,34 +47,46 @@ public class OSTTest {
         }
         System.out.println("ordered keys: " + sb);
 
-        assertEquals(ost.rank("A"), 0);
-        assertEquals(ost.rank("B"), 1);
-        assertEquals(ost.rank("C"), 1);
-        assertEquals(ost.rank("P"), 6);
-        assertEquals(ost.rank("Q"), 7);
-        assertEquals(ost.rank("Y"), 10);
+        assertEquals(0, ost.rank("A"));
+        assertEquals(1, ost.rank("B"));
+        assertEquals(1, ost.rank("C"));
+        assertEquals(6, ost.rank("P"));
+        assertEquals(7, ost.rank("Q"));
+        assertEquals(10, ost.rank("Y"));
     }
 
     @Test
-    public void testDelete() throws InstantiationException, IllegalAccessException {
-        OST<String, Integer> ost = implClazz.newInstance();
-        String[] splits = "S E A R C H E X A M P L E".split(" ");
-        //A C E H L M P R S X
-        for (int i = 0; i < splits.length; i++) {
-            ost.put(splits[i], i);
-        }
-        assertThrows(IllegalArgumentException.class, () -> ost.delete(null));
+    public void testDelete() throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        OST<String, Integer> ost = mockTestData();
         int originSize = ost.size();
+
+        assertThrows(IllegalArgumentException.class, () -> ost.delete(null));
+
         ost.delete("B");
         assertEquals(ost.size(), originSize);
-        assertEquals(ost.rank("B"), 1);
-        assertEquals(ost.rank("P"), 6);
+        assertEquals(1, ost.rank("B"));
+        assertEquals(6, ost.rank("P"));
+
         ost.delete("C");
         assertEquals(ost.size(), originSize - 1);
         assert (ost.get("C") == null);
-        assertEquals(ost.rank("B"), 1);
-        assertEquals(ost.rank("P"), 5);
+        assertEquals(1, ost.rank("B"));
+        assertEquals(5, ost.rank("P"));
     }
 
+
+    @Test
+    public void testFloorAndCeiling() throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        OST<String, Integer> ost = mockTestData();
+
+        assertEquals("A", ost.floor("B"));
+        assertEquals("C", ost.ceiling("B"));
+
+        assertEquals("C", ost.floor("C"));
+        assertEquals("C", ost.ceiling("C"));
+
+        assertEquals("X", ost.floor("Y"));
+        assertNull(ost.ceiling("Y"));
+    }
 
 }
